--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "iscroll": "~5.1.3",
     "jquery": "~2.1.4",
     "gsap": "~1.16.1",
-    "scrollmagic": "~2.0.5"
+    "scrollmagic": "~2.0.5",
+    "jquery.easing": "~1.3.2",
+    "fastclick": "~1.0.6"
   },
   "devDependencies": {
     "browserify": "^5.10.1",
