--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "express": "~3.4.8",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "0.0.7",
+    "gulp-file-include": "~0.9.0",
     "gulp-livereload": "^0.3.2",
+    "gulp-minify-css": "~1.1.1",
     "gulp-notify": "^1.2.5",
     "gulp-plumber": "~0.5.6",
     "gulp-preprocess": "^1.1.1",
     "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "~1.5.2",
     "gulp-uglify": "~1.2.0",
     "multipipe": "^0.1.1",
     "reactify": "^0.17.1",
     "tiny-lr": "0.0.5",
-    "vinyl-transform": "0.0.1",
-    "gulp-sourcemaps": "~1.5.2",
-    "gulp-sass": "~2.0.0",
-    "gulp-file-include": "~0.9.0",
-    "gulp-minify-css": "~1.1.1"
+    "vinyl-transform": "0.0.1"
   }
 }
